# DeepReadMapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  environment.yml  setup_hnswlib.sh  setup_submodule.sh
includes/: config.hpp  fast_model.hpp  index.hpp  preprocess.hpp  search.hpp  tok2index.hpp  vectorize.hpp
includes/gann_hnsw/: gann_hnsw.hpp
includes/hnswlib_dir/: index.hpp  search.hpp
includes/hnswm/: bruteforce.h  common.h  heap.h  hnsw.h  index.hpp  search.hpp  visited.h
includes/hnswpq/: index.hpp  search.hpp
includes/inference/: fast_model.hpp  preprocess.hpp  vectorize.hpp
includes/utils/: config.hpp  metrics.hpp  parse_inputs.hpp  post_processor.hpp  reranker.hpp  tok2index.hpp  utils.hpp
models/: finetuned_sgn33-new-a-Apr6.model  finetuned_sgn33-new-a-Apr6.onnx  finetuned_sgn33-new-a-Apr6.vocab  finetuned_sgn33-new-a-Apr6.xml  tok2index.txt
src/: fast_model.cpp  gen_ref.cpp  main.cpp  optimized_main.cpp  preprocess.cpp  test_inference.cpp  test_postprocess.cpp  test_postprocess_stream.cpp  test_search.cpp  test_sw_score.cpp  tok2index.cpp  vectorize.cpp
src/gann_hnsw/: gann_hnsw.cpp  test_gann_build.cpp  test_gann_search.cpp
src/hnsw_dir/: index.cpp  search.cpp
src/hnswlib_dir/: index.cpp  search.cpp  test_search.cpp
src/hnswm/: bruteforce.cpp  hnsw.cpp  index.cpp  search.cpp  test_build.cpp  test_search.cpp
src/hnswpq/: index.cpp  search.cpp  test_search.cpp
src/inference/: fast_model.cpp  preprocess.cpp  test_inference.cpp  vectorize.cpp
src/utils/: metrics.cpp  parse_inputs.cpp  post_processor.cpp  reranker.cpp  utils.cpp
tests/: test_data.fastq  test_data.fna  test_data_quer.txt  test_data_ref.txt
